[OPENMEETINGS-895] Files tab is fixed, file-names are truncated, auto-switch is fixed

--- a/openmeetings-web/src/main/webapp/css/theme.css
+++ b/openmeetings-web/src/main/webapp/css/theme.css
@@ -396,11 +396,15 @@ html, body {
 	display: inline-block;
 	vertical-align: top;
 }
-.file.item .name {
+.file.item .name, .file.item .name span {
 	color: black;
 	display: block;
-	overflow: hidden;
 	width: 230px;
+	max-width: 230px;
+	/* Required for text-overflow to do anything */
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
 }
 .file.item .errors {
 	position: absolute;
